# Tunguska

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.in  THANKS  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  reconf
doc/: MOREHELP  Makefile  Makefile.am  Makefile.in  The_Fine_Manual.dvi  The_Fine_Manual.lyx
m4/: Makefile  Makefile.am  Makefile.in
memory_image_asm/: ants.asm  ants.ternobj  image.ternobj  pong.ternobj  snow.asm  snow.ternobj
share/: Makefile  Makefile.am  Makefile.in
share/memory_image_3cc/: .Makefile.swp  Makefile  README  gmon.out  main.c  out.asm  out.ternobj  system.3h  system.c
share/memory_image_3cc/CVS/: Entries  Repository  Root
share/memory_image_asm/: README  agdp.asm
src_3cc/: Makefile  Makefile.am  Makefile.in  compiler.cc  compiler.h  conditional.cc  conditional.h  function.h  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll  sllist.h  tables.cc  tables.h  tunguska_3cc  type.h
src_3cc/.deps/: bivalent.Po  compiler.Po  conditional.Po  expression.Po  function.Po  memory.Po  parser.Po  scanner.Po  tables.Po  variable.Po
src_tunguska/: Makefile  Makefile.am  Makefile.in  agdp.cc  agdp.h  assembler.cc  assembler.h  disk.cc  disk.h  display.cc  display.h  error.h  interrupt.cc  interrupt.h  keyboard.cc  keyboard.h  machine.cc  machine.h  memory.cc  memory.h  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll  tg_assembler  trit.cc  trit.h  tryte.cc  tryte.h  tunguska  tunguska.cc  values.h
src_tunguska/.deps/: agdp.Po  assembler.Po  disk.Po  display.Po  interrupt.Po  keyboard.Po  machine.Po  memory.Po  parser.Po  scanner.Po  trit.Po  tryte.Po  tunguska.Po
