# Copyright (C) 2008 Viktor Lofgren <vlofgren@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

dist_pkgdata_DATA = symbols.bmp bg.bmp memory_image_3cc.tar.gz memory_image_asm.tar.gz
